--- a/styles.css
+++ b/styles.css
@@ -95,9 +95,8 @@ header nav{
 }
 .carousel .list .item .image{
     width: var(--w-image);
-    height: 100%;
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: calc(100% - calc(var(--w-image) * var(--calculate)));
     padding: 20px;
     display: flex;
@@ -107,7 +106,8 @@ header nav{
     font-weight: 500;
 }
 .carousel .list .item .image img{
-    width: 90%;
+    width: 75%;
+    height: 70vh;
     margin-bottom: 20px;
     filter: drop-shadow(0 150px 50px #9e0c0c55);
 }
@@ -128,7 +128,7 @@ header nav{
     padding: 150px 20px  20px 80px;
 }
 .carousel .list .item .main-content .content h2{
-    font-size: 5em;
+    font-size: 3em;
     font-family: 'Aboreto';
 }
 .carousel .list .item .main-content .content .price{
